--- a/MoviesList/MovieList/CollectionViewCell.xib
+++ b/MoviesList/MovieList/CollectionViewCell.xib
@@ -3,13 +3,12 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="MoviesList" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="CollectionViewCell" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="MoviesList" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="120" height="230"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -19,25 +18,35 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xht-LU-mgc">
                         <rect key="frame" x="0.0" y="0.0" width="120" height="230"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LI8-Pq-C44">
-                                <rect key="frame" x="0.0" y="0.0" width="118" height="108"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LI8-Pq-C44">
+                                <rect key="frame" x="0.0" y="0.0" width="120" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="pSq-Zh-bXt"/>
+                                    <constraint firstAttribute="width" secondItem="LI8-Pq-C44" secondAttribute="height" multiplier="2:3" id="uiN-bU-FRO"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="290-3N-B2n">
-                                <rect key="frame" x="10" y="188" width="102" height="42"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="290-3N-B2n">
+                                <rect key="frame" x="5" y="185" width="110" height="45"/>
                                 <fontDescription key="fontDescription" name="NotoSansOriya" family="Noto Sans Oriya" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="LI8-Pq-C44" firstAttribute="top" secondItem="Xht-LU-mgc" secondAttribute="top" id="3CT-BP-epP"/>
+                            <constraint firstAttribute="bottom" secondItem="290-3N-B2n" secondAttribute="bottom" id="N30-D4-CcQ"/>
+                            <constraint firstAttribute="trailing" secondItem="LI8-Pq-C44" secondAttribute="trailing" id="OgF-Su-4R7"/>
+                            <constraint firstItem="290-3N-B2n" firstAttribute="top" secondItem="LI8-Pq-C44" secondAttribute="bottom" constant="5" id="TM7-2Q-Iky"/>
+                            <constraint firstItem="290-3N-B2n" firstAttribute="leading" secondItem="Xht-LU-mgc" secondAttribute="leading" constant="5" id="baa-Xx-ecD"/>
+                            <constraint firstItem="LI8-Pq-C44" firstAttribute="leading" secondItem="Xht-LU-mgc" secondAttribute="leading" id="hJi-uo-RLF"/>
+                            <constraint firstAttribute="trailing" secondItem="290-3N-B2n" secondAttribute="trailing" constant="5" id="iWZ-Nm-iH9"/>
+                        </constraints>
                     </view>
                 </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="Xht-LU-mgc" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="9Ms-Vm-BkO"/>
-                <constraint firstItem="Xht-LU-mgc" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="o4i-r1-df2"/>
+                <constraint firstAttribute="trailing" secondItem="Xht-LU-mgc" secondAttribute="trailing" id="57v-LN-5aM"/>
+                <constraint firstAttribute="bottom" secondItem="Xht-LU-mgc" secondAttribute="bottom" id="Jca-x6-Wdp"/>
                 <constraint firstItem="Xht-LU-mgc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="q4g-aO-k7v"/>
                 <constraint firstItem="Xht-LU-mgc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="s1m-CL-VMy"/>
             </constraints>
@@ -45,6 +54,8 @@
             <connections>
                 <outlet property="hiImg" destination="LI8-Pq-C44" id="T65-l6-Zhv"/>
                 <outlet property="hiTitle" destination="290-3N-B2n" id="SMq-2h-R7L"/>
+                <outlet property="imageWidthConstraint" destination="pSq-Zh-bXt" id="nkp-uH-XSa"/>
+                <outlet property="widthConstraint" destination="LI8-Pq-C44" id="dpL-PQ-nmq"/>
             </connections>
             <point key="canvasLocation" x="109.9236641221374" y="26.760563380281692"/>
         </collectionViewCell>
